Revision history for Ember

0.06    ? February 2019
        Add help screens.

0.05    19th February 2019
        Chapter selection via table of contents.

0.04    17th February 2019
        Add book metadata viewer screen.

0.03    16th February 2019
        Refactoring to enable future functionality.

0.02    16th February 2019
        Fixes, cleanup, documentation, and packaging.

0.01    29th August 2017
        Initial version.
