@@ -21,6 +21,7 @@ WriteMakefile(
         'File::Slurp'       => '0',
         'FindBin'           => '0',
         'HTML::FormatText'  => '0',
+        'JSON'              => '0',
         'Scalar::Util'      => '0',
         'Term::ANSIScreen'  => '0',
         'Term::ReadKey'     => '0',
