@@ -20,7 +20,10 @@ Ember.
 use 5.008;
 use strict;
 use warnings;
-use fields qw( dir );
+use fields qw( dir json );
+
+use File::Slurp;
+use JSON;
 
 =head2 Fields
 
@@ -29,6 +32,10 @@ use fields qw( dir );
 =item dir
 
 The configuration directory.
+
+=item json
+
+A JSON encoder/decoder.
 
 =back
 
@@ -48,6 +55,7 @@ sub new {
     my $self = fields::new($class);
 
     $self->{dir} = $dir;
+    $self->{json} = JSON->new()->utf8()->indent()->space_after();
 
     return $self;
 }
@@ -78,61 +86,106 @@ sub open {
 
 =over
 
-=item get_pos($filename)
+=item read_json($name, $if_empty)
 
-Fetch the last reading position for a given eBook filename.
+Read the contents of the given configuration file and return a reference.
+
+=cut
+
+sub read_json {
+    my ($self, $name, $if_empty) = @_;
+    my $path = $self->{dir} . '/' . $name . '.json';
+
+    return $if_empty if (!-f $path);
+
+    my $json = read_file($path, { binmode => ':utf8' });
+
+    return $if_empty if (length($json) == 0);
+    return $self->{json}->decode($json);
+}
+
+=item write_json($name, $content)
+
+Write the input to a given configuration file.
+
+=cut
+
+sub write_json {
+    my ($self, $name, $content) = @_;
+    my $path = $self->{dir} . '/' . $name . '.json';
+    my $json = $self->{json}->encode($content);
+
+    # TODO error checking
+    write_file($path, { binmode => ':utf8', atomic => 1 }, $json);
+}
+
+=item next_id($type)
+
+Returns the next unique ID of the given type.
+
+=cut
+
+sub next_id {
+    my ($self, $type) = @_;
+    my $map = $self->read_json('last_ids', {});
+    my $id = 1;
+
+    if (exists($map->{$type})) {
+        $id = ++$map->{$type};
+    } else {
+        $map->{$type} = 1;
+    }
+
+    $self->write_json('last_ids', $map);
+
+    return $id;
+}
+
+=item get_id($filename)
+
+Fetch the Ember ID for the book with the given filename.
+
+=cut
+
+sub get_id {
+    my ($self, $filename) = @_;
+    my $map = $self->read_json('file_to_id', {});
+    my $id = $map->{$filename};
+
+    if (!$id) {
+        $id = $self->next_id('book');
+        $map->{$filename} = $id;
+        $self->write_json('file_to_id', $map);
+    }
+
+    return $id;
+}
+
+=item get_pos($book)
+
+Fetch the last chapter and reading position for a given eBook.
 
 =cut
 
 sub get_pos {
-    my ($self, $filename) = @_;
-    my $qfn = quotemeta($filename);
-    my $file = $self->{dir} . '/position.txt';
+    my ($self, $book) = @_;
+    my $map = $self->read_json('positions', {});
 
-    return unless (-e $file);
-
-    CORE::open(IN, '<', $file);
-
-    while (defined(my $line = <IN>)) {
-        if ($line =~ /^$qfn\t(.+?)\t(\d+)$/) {
-            my %result = ( chapter => $1, pos => $2 );
-            close(IN);
-            return %result;
-        }
-    }
-
-    close(IN);
-
-    return;
+    return exists($map->{$book}) ? @{$map->{$book}} : ();
 }
 
-=item save_pos($reader)
+=item save_pos($book, $chapter, $pos)
 
-Save the last reading position for a given eBook reader instance.
+Save the last reading position for a book.
 
 =cut
 
 sub save_pos {
-    my ($self, $reader) = @_;
-    my $file = $self->{dir} . '/position.txt';
-    my $tmp = $self->{dir} . '/position.tmp';
-    my $filename = $reader->{book}{filename};
-    my $qfn = quotemeta($filename);
+    my ($self, $book, $chapter, $pos) = @_;
+    my $map = $self->read_json('positions', {});
 
-    CORE::open(IN, '<', $file);
-    CORE::open(OUT, '>', $tmp);
-    # TODO PI line endings?
-    print OUT $filename, "\t", $reader->{chapter}{path}, "\t", $reader->{pos}, "\n";
-
-    while (defined(my $line = <IN>)) {
-        print OUT $line unless ($line =~ /^$qfn\t/);
-    }
-
-    close(OUT);
-    close(IN);
-
-    unlink($file);
-    rename($tmp, $file);
+    $map->{$book} = [ $chapter, $pos ];
+    $self->write_json('positions', $map);
 }
 
 =back
